# causal

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
app/: index.html  package.json
app/src/: App.vue  components.d.ts  main.ts
app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: error.rs  lib.rs  main.rs
app/src-tauri/src/api/: event.rs  fetch.rs  mod.rs
app/src-tauri/src/openai/: chat.rs  mod.rs  tool.rs
app/src-tauri/src/openai/tool/: mcp.rs  search.rs
app/src/components/: AgentSelector.vue  AvatarSelector.vue  CodeEditor.vue  LogViewer.vue  MarkdownRenderer.vue  ModelSelector.vue  Sidebar.vue  ToolSelector.vue
app/src/layouts/: MainLayout.vue
app/src/router/: index.ts
app/src/services/: api.ts  index.ts  tauriApi.ts  typings.d.ts
app/src/services/mock/: agentData.ts  knowledgeData.ts  providerData.ts  toolData.ts
app/src/stores/: agentCategoryStore.ts  agentStore.ts  chatSessionStore.ts  fileIconStore.ts  globalStore.ts  iconStore.ts  knowledgeBaseCategoryStore.ts  knowledgeBaseStore.ts  providerStore.ts  providersStore.ts  themeStore.ts  toolCategoryStore.ts  toolStore.ts
app/src/styles/: main.css
app/src/types/: tauri.d.ts
app/src/views/agents/: index.vue
app/src/views/agents/components/: AgentCategoryAddModal.vue  AgentCategoryDeleteModal.vue  AgentCategoryFormModal.vue  AgentDeleteModal.vue  AgentFormModal.vue
app/src/views/chat/: index.vue
app/src/views/chat/components/: ChatHeader.vue  ChatInput.vue  ChatMessageList.vue  ChatSidebar.vue  NoSessionsAgentGrid.vue
app/src/views/knowledge/: index.vue
app/src/views/messages/: index.vue
app/src/views/profile/: index.vue
app/src/views/settings/: about.vue  model.vue  search.vue  settings.vue
app/src/views/settings/components/: ProviderForm.vue
app/src/views/tools/: edit.vue  index.vue  js-edit.vue  mcpio-edit.vue  mcpsse-edit.vue  sse-edit.vue
app/src/views/tools/components/: ToolCategoryAddModal.vue  ToolCategoryDeleteModal.vue  ToolCategoryFormModal.vue  ToolDeleteModal.vue
document/: Cargo.toml
document/src/: lib.rs
store/: Cargo.toml
store/src/: error.rs  lib.rs  models.rs  schema.rs
store/src/models/: agent.rs  chat.rs  knowledge.rs  provider.rs  search.rs  settings.rs  tool.rs
store/src/operations/: agent.rs  chat.rs  mod.rs  provider.rs  search.rs  settings.rs  tool.rs
tools/: Cargo.toml
tools/src/: deno.rs  error.rs  lib.rs
