[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Jiang <hackfree@msn.com>"]

[workspace]
resolver = "2"
members = ["app/src-tauri", "store", "tools"]
# exclude = ["app"]
# default-members = ["app"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"

store = { path = "./store" }
