[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Jiang <hackfree@msn.com>"]

[workspace]
resolver = "2"
members = ["app/src-tauri", "document", "store", "tools"]
# exclude = ["app"]
# default-members = ["app"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "fmt",
] }

thiserror = "2.0.12"

async-openai = "0.28.1"

store = { path = "./store" }
# tools = { path = "./tools" }
document = { path = "./document" }
