[package]
name = "tools"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
deno_core = "0.343.0"
deno_error = "0.5.6"
reqwest = "0.12.12"

serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
